<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.upload.UploadActivity">

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flexboxLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:alignItems="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:backgroundTint="@color/dark_blue"
            app:cornerRadius="@dimen/my_corner"
            app:icon="@drawable/ic_back_arrow"
            app:iconTint="@color/light_green" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/search_by_image"
            android:textSize="16sp" />
    </com.google.android.flexbox.FlexboxLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:cardBackgroundColor="#E5E5E5"
        app:cardCornerRadius="14dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flexboxLayout">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="18dp"
            app:alignItems="center"
            app:flexDirection="column">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/upload_your_image"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/png_jpg_and_gif_files_are_allowed"
                android:textColor="#ADB5BD" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginBottom="16dp"
                android:background="@color/white"
                app:cardCornerRadius="14dp"
                app:cardElevation="0dp"
                app:layout_flexGrow="1">

                <ImageView
                    android:id="@+id/iv_image_upload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/image"
                    android:src="@drawable/image_upload" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_choose_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_blue"
                android:fontFamily="@font/poppins_semi_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/choose_a_file"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/my_corner" />
        </com.google.android.flexbox.FlexboxLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/upload_image"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/my_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>