<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">


    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flexboxLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:alignItems="center"
        app:justifyContent="space_between"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/inacure" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            tools:src="@tools:sample/avatars" />
    </com.google.android.flexbox.FlexboxLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/search_bg"
        app:cardBackgroundColor="#E5E5E5"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flexboxLayout">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginHorizontal="8dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_search"
                app:layout_alignSelf="center"
                app:tint="#C4C4C4" />

            <EditText
                android:id="@+id/edit_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="#00FFFFFF"
                android:ems="1"
                android:hint="@string/search"
                android:importantForAutofill="no"
                android:inputType="text"
                android:lines="1"
                android:paddingVertical="14dp"
                app:layout_alignSelf="center"
                app:layout_flexGrow="1" />
        </com.google.android.flexbox.FlexboxLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:cardBackgroundColor="#292929"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            app:alignItems="center"
            app:justifyContent="space_evenly">

            <ImageView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_home"
                app:tint="@color/white" />

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_scanner"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardBackgroundColor="#55C066"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/icon_scanner"
                    android:padding="8dp"
                    android:src="@drawable/ic_scanner"
                    app:tint="@color/white" />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/tv_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_account"
                app:tint="@color/white" />

        </com.google.android.flexbox.FlexboxLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>